agregando la lista de participantes

--- a/index.html
+++ b/index.html
@@ -16,5 +16,13 @@
             son básicamente dos: saber HTML (esto lo conseguirás siguiendo este curso) y un 
             editor de texto (nosotros utilizaremos el Notepad++, aunque se pueden usar otros editores o programas).
         </p>
+        <h2>
+            Participantes
+        </h2>
+        <ul>
+            <li>Anderson David Mendoza Ramos</li>
+            <li>Aldo Cupe Mejia</li>
+            <li>Jose Humberto Requejo</li>
+        </ul>
     </body>
 </html>
