incorporacion de la cabezera

--- a/index.html
+++ b/index.html
@@ -2,32 +2,119 @@
 <html lang="es">    
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="viewport" content="width=device=width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="estilo.css">
     <title>
-        Tecnología web
+        Tecnología
     </title>
 </head>
 <body>
-    <div class="bloque-1">
-        <h1>
-            <b>¿Qué se necesita para desarrollar una página web?</b>
-        </h1>
-        <p>
-            Los requisitos principales y fundamentales, para escribir código HTML y crear páginas web, 
-            son básicamente dos: saber HTML (esto lo conseguirás siguiendo este curso) y un 
-            editor de texto (nosotros utilizaremos el Notepad++, aunque se pueden usar otros editores o programas).
-        </p>
-    </div>    
-    <div class="bloque-2">    
-        <h2>
-            Participantes
-        </h2>
-        <ul>
-            <li>Anderson David Mendoza Ramos</li>
-            <li>Aldo Cupe Mejia</li>
-            <li>Jose Humberto Requejo</li>
-        </ul>
-    </div>    
-</body>
-</html>
+    <header class="header">
+        <div class="bloque logo-nav-bloque">
+            <a href="#" class="logo">LOGO</a>
+            <span class="menu-icon">Ver menu</span>
+            <nav class="navigation">
+                <ul>
+                    <li><a href="index.html">Inicio</a></li>
+                    <li><a href="Redes-Sociales.html">Redes Sociales</a></li>
+                    <li><a href="Desarrollo-Web.html">Desarrollo Web</a></li>
+                    <li><a href="Tendencias.html">Tendencias</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+    <main class="main">
+        <div class="bloque">
+            <h1>
+                Presentación
+            </h1>
+            <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+                Qui consectetur beatae voluptatem aspernatur incidunt. 
+                Ducimus ea quo nihil similique nesciunt, distinctio 
+                deleniti voluptatem maiores iusto odit soluta voluptas 
+                optio qui! Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+                Qui consectetur beatae voluptatem aspernatur incidunt. 
+                Ducimus ea quo nihil similique nesciunt, distinctio 
+                deleniti voluptatem maiores iusto odit soluta voluptas 
+                optio qui! Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+                Qui consectetur beatae voluptatem aspernatur incidunt. 
+                Ducimus ea quo nihil similique nesciunt, distinctio 
+                deleniti voluptatem maiores iusto odit soluta voluptas 
+                optio qui!
+            </p>
+        </div>
+        <div class="bloque">
+            <h1>
+                Redes Sociales
+            </h1>
+            <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+                Qui consectetur beatae voluptatem aspernatur incidunt. 
+                Ducimus ea quo nihil similique nesciunt, distinctio 
+                deleniti voluptatem maiores iusto odit soluta voluptas 
+                optio qui! Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+                Qui consectetur beatae voluptatem aspernatur incidunt. 
+                Ducimus ea quo nihil similique nesciunt, distinctio 
+                deleniti voluptatem maiores iusto odit soluta voluptas 
+                optio qui! Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+                Qui consectetur beatae voluptatem aspernatur incidunt. 
+                Ducimus ea quo nihil similique nesciunt, distinctio 
+                deleniti voluptatem maiores iusto odit soluta voluptas 
+                optio qui! Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+                Qui consectetur beatae voluptatem aspernatur incidunt. 
+                Ducimus ea quo nihil similique nesciunt, distinctio 
+                deleniti voluptatem maiores iusto odit soluta voluptas 
+                optio qui!
+            </p>
+        </div>    
+        <div class="bloque">    
+            <h1>
+                Desarrollo Web
+            </h1>
+            <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+                Qui consectetur beatae voluptatem aspernatur incidunt. 
+                Ducimus ea quo nihil similique nesciunt, distinctio 
+                deleniti voluptatem maiores iusto odit soluta voluptas 
+                optio qui! Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+                Qui consectetur beatae voluptatem aspernatur incidunt. 
+                Ducimus ea quo nihil similique nesciunt, distinctio 
+                deleniti voluptatem maiores iusto odit soluta voluptas 
+                optio qui! Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+                Qui consectetur beatae voluptatem aspernatur incidunt. 
+                Ducimus ea quo nihil similique nesciunt, distinctio 
+                deleniti voluptatem maiores iusto odit soluta voluptas 
+                optio qui! Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+                Qui consectetur beatae voluptatem aspernatur incidunt. 
+                Ducimus ea quo nihil similique nesciunt, distinctio 
+                deleniti voluptatem maiores iusto odit soluta voluptas 
+                optio qui!
+            </p>
+        </div>
+        <div class="bloque">
+            <h1>
+                Tendencias
+            </h1>
+            <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+                Qui consectetur beatae voluptatem aspernatur incidunt. 
+                Ducimus ea quo nihil similique nesciunt, distinctio 
+                deleniti voluptatem maiores iusto odit soluta voluptas 
+                optio qui! Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+                Qui consectetur beatae voluptatem aspernatur incidunt. 
+                Ducimus ea quo nihil similique nesciunt, distinctio 
+                deleniti voluptatem maiores iusto odit soluta voluptas 
+                optio qui! Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+                Qui consectetur beatae voluptatem aspernatur incidunt. 
+                Ducimus ea quo nihil similique nesciunt, distinctio 
+                deleniti voluptatem maiores iusto odit soluta voluptas 
+                optio qui! Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
+                Qui consectetur beatae voluptatem aspernatur incidunt. 
+                Ducimus ea quo nihil similique nesciunt, distinctio 
+                deleniti voluptatem maiores iusto odit soluta voluptas 
+                optio qui!
+            </p>
+        </div>
+    </main>
