Agragando el pie de página: V1

--- a/index.html
+++ b/index.html
@@ -118,3 +118,68 @@
             </p>
         </div>
     </main>
+    <footer>
+        <div class="container-footer-all">
+            <div class="container-body">
+                <div class="colum1">
+                    <h1>
+                        Información del grupo de trabajo
+                    </h1>
+                    <p>
+                        Somos un grupo de desarrolladores web interesados en compartir información sobre la tecnología en distintos 
+                        ámbitos, te invitamos a ver nuestro contenido esperando con las mejores ganas de que lo disfrutes.
+                    </p>
+                    <div class="copyright">
+                        © 2021 Todos los Derechos Reservados
+                    </div>
+                </div>
+                <div class="colum2">
+                    <h1>
+                        Redes Sociales
+                    </h1>
+                    <div class="row">
+                        <img src="#">
+                        <label>
+                            Siguenos en Facebook
+                        </label>
+                    </div>
+                    <div class="row">
+                        <img src="#">
+                        <label>
+                            Siguenos en Twitter
+                        </label>
+                    </div>
+                    <div class="row">
+                        <img src="#">
+                        <label>
+                            Siguenos en Instagram
+                        </label>
+                    </div>
+                </div>
+                <div class="colum3">
+                    <h1>
+                        Contáctanos
+                    </h1>
+                    <div class="row2">
+                        <img src="#">
+                        <label>
+                            Perú, Lima.
+                        </label>
+                    </div>
+                    <div class="row2">
+                        <img src="#">
+                        <label>
+                            +51 987654321
+                        </label>
+                    </div>
+                    <div class="row2">
+                        <img src="#">
+                        <label>
+                            grupodevs@gmail.com
+                        </label>
+                    </div>
+                </div>
+            </div>   
+    </footer>
+</body>
+</html>
