--- a/Desarrollo-Web.html
+++ b/Desarrollo-Web.html
@@ -114,19 +114,19 @@
                         Redes Sociales
                     </h1>
                     <div class="row">
-                        <img src="#">
+                        <img src="Iconos/facebook.png">
                         <label>
                             Siguenos en Facebook
                         </label>
                     </div>
                     <div class="row">
-                        <img src="#">
+                        <img src="Iconos/twitter.png">
                         <label>
                             Siguenos en Twitter
                         </label>
                     </div>
                     <div class="row">
-                        <img src="#">
+                        <img src="Iconos/instagram.png">
                         <label>
                             Siguenos en Instagram
                         </label>
@@ -137,19 +137,19 @@
                         Contáctanos
                     </h1>
                     <div class="row2">
-                        <img src="#">
+                        <img src="Iconos/house.png">
                         <label>
                             Perú, Lima.
                         </label>
                     </div>
                     <div class="row2">
-                        <img src="#">
+                        <img src="Iconos/smartphone.png">
                         <label>
                             +51 987654321
                         </label>
                     </div>
                     <div class="row2">
-                        <img src="#">
+                        <img src="Iconos/contact.png">
                         <label>
                             grupodevs@gmail.com
                         </label>
