agregabdo iconos del footer a la pestaña Tendencias

--- a/Tendencias.html
+++ b/Tendencias.html
@@ -102,19 +102,19 @@
                         Redes Sociales
                     </h1>
                     <div class="row">
-                        <img src="#">
+                        <img src="Iconos/facebook.png">
                         <label>
                             Siguenos en Facebook
                         </label>
                     </div>
                     <div class="row">
-                        <img src="#">
+                        <img src="Iconos/twitter.png">
                         <label>
                             Siguenos en Twitter
                         </label>
                     </div>
                     <div class="row">
-                        <img src="#">
+                        <img src="Iconos/instagram.png">
                         <label>
                             Siguenos en Instagram
                         </label>
@@ -125,19 +125,19 @@
                         Contáctanos
                     </h1>
                     <div class="row2">
-                        <img src="#">
+                        <img src="Iconos/house.png">
                         <label>
                             Perú, Lima.
                         </label>
                     </div>
                     <div class="row2">
-                        <img src="#">
+                        <img src="Iconos/smartphone.png">
                         <label>
                             +51 987654321
                         </label>
                     </div>
                     <div class="row2">
-                        <img src="#">
+                        <img src="Iconos/contact.png">
                         <label>
                             grupodevs@gmail.com
                         </label>
