agregando iconos al footer en la pestaña de inicio

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="viewport" content="width=device=width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="estilo.css">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="scripts.js"></script>
     <title>
         Tecnología
     </title>
@@ -138,19 +140,19 @@
                         Redes Sociales
                     </h1>
                     <div class="row">
-                        <img src="#">
+                        <img src="Iconos/facebook.png">
                         <label>
                             Siguenos en Facebook
                         </label>
                     </div>
                     <div class="row">
-                        <img src="#">
+                        <img src="Iconos/twitter.png">
                         <label>
                             Siguenos en Twitter
                         </label>
                     </div>
                     <div class="row">
-                        <img src="#">
+                        <img src="Iconos/instagram.png">
                         <label>
                             Siguenos en Instagram
                         </label>
@@ -161,19 +163,19 @@
                         Contáctanos
                     </h1>
                     <div class="row2">
-                        <img src="#">
+                        <img src="Iconos/house.png">
                         <label>
                             Perú, Lima.
                         </label>
                     </div>
                     <div class="row2">
-                        <img src="#">
+                        <img src="Iconos/smartphone.png">
                         <label>
                             +51 987654321
                         </label>
                     </div>
                     <div class="row2">
-                        <img src="#">
+                        <img src="Iconos/contact.png">
                         <label>
                             grupodevs@gmail.com
                         </label>
