aplicando el diseño del cuerpo en la pestaña Tendencias

--- a/Tendencias.html
+++ b/Tendencias.html
@@ -27,60 +27,54 @@
         </div>
     </header>
     <main class="main">
+        <img src="imagenes/realidad-virtual.jpg" class="imagen1">
         <div class="bloque">
             <h1>
-                Presentación
+                Presentación de las tendencias tecnologicas en la realidad virtual y aumentada.
             </h1>
             <p>
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
-                Qui consectetur beatae voluptatem aspernatur incidunt. 
-                Ducimus ea quo nihil similique nesciunt, distinctio 
-                deleniti voluptatem maiores iusto odit soluta voluptas 
-                optio qui! Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
-                Qui consectetur beatae voluptatem aspernatur incidunt. 
-                Ducimus ea quo nihil similique nesciunt, distinctio 
-                deleniti voluptatem maiores iusto odit soluta voluptas 
-                optio qui! Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
-                Qui consectetur beatae voluptatem aspernatur incidunt. 
-                Ducimus ea quo nihil similique nesciunt, distinctio 
-                deleniti voluptatem maiores iusto odit soluta voluptas 
-                optio qui! Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
-                Qui consectetur beatae voluptatem aspernatur incidunt. 
-                Ducimus ea quo nihil similique nesciunt, distinctio 
-                deleniti voluptatem maiores iusto odit soluta voluptas 
-                optio qui! Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
-                Qui consectetur beatae voluptatem aspernatur incidunt. 
-                Ducimus ea quo nihil similique nesciunt, distinctio 
-                deleniti voluptatem maiores iusto odit soluta voluptas 
-                optio qui! Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
-                Qui consectetur beatae voluptatem aspernatur incidunt. 
-                Ducimus ea quo nihil similique nesciunt, distinctio 
-                deleniti voluptatem maiores iusto odit soluta voluptas 
-                optio qui! Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
-                Qui consectetur beatae voluptatem aspernatur incidunt. 
-                Ducimus ea quo nihil similique nesciunt, distinctio 
-                deleniti voluptatem maiores iusto odit soluta voluptas 
-                optio qui! Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
-                Qui consectetur beatae voluptatem aspernatur incidunt. 
-                Ducimus ea quo nihil similique nesciunt, distinctio 
-                deleniti voluptatem maiores iusto odit soluta voluptas 
-                optio qui! Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
-                Qui consectetur beatae voluptatem aspernatur incidunt. 
-                Ducimus ea quo nihil similique nesciunt, distinctio 
-                deleniti voluptatem maiores iusto odit soluta voluptas 
-                optio qui! Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
-                Qui consectetur beatae voluptatem aspernatur incidunt. 
-                Ducimus ea quo nihil similique nesciunt, distinctio 
-                deleniti voluptatem maiores iusto odit soluta voluptas 
-                optio qui! Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
-                Qui consectetur beatae voluptatem aspernatur incidunt. 
-                Ducimus ea quo nihil similique nesciunt, distinctio 
-                deleniti voluptatem maiores iusto odit soluta voluptas 
-                optio qui! Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
-                Qui consectetur beatae voluptatem aspernatur incidunt. 
-                Ducimus ea quo nihil similique nesciunt, distinctio 
-                deleniti voluptatem maiores iusto odit soluta voluptas 
-                optio qui!
+                Talkwalker y HubSpot realizaron un estudio sobre las tendencias en redes sociales de 2020 en el cual se dio a conocer, que las conversaciones sobre realidad aumentada y realidad virtual tuvieron 13,2 millones de interacciones en el primer trimestre de 2019 y el 5% de estas menciones fueron en torno al marketing.
+                La realidad aumentada y la realidad virtual son los grandes desarrollos de la tecnología, siendo integradas a distintas aplicaciones e incluso a las redes sociales. Se espera que éstas sean una de las grandes tendencias en el 2020 para impulsar la experiencia del usuario y la gamificación. 
+                La función de la realidad aumentada será ayudar a aumentar la experiencia del usuario dentro de la tienda; mientras que la realidad virtual será fundamental para impulsarla en línea.
+            </p>  
+        </div>  
+        <div class="bloque">   
+            <h1>
+                ¿En que se puede aplicar la realidad virtual y aumentada?
+            </h1>    
+            <p>   
+                 1. Videojuegos:
+                 Quizás donde más se haya avanzado en realidad aumentada. Todas las grandes empresas de este sector tienen ya potentes desarrollos y lanzamientos de videojuegos que combinan la realidad física con la virtual. Además, ofrecen múltiples posibilidades de personalización de cada juego.
+                 2. Visión de Realidad Aumentada:
+                 Las Google Glass, las gafas HoloLens de Microsoft, y los cascos de realidad virtual de Samsung, HTC o Sony (además de proyectos que están preparando otras empresas como Facebook) utilizan ya la realidad aumentada. Estos desarrollos permiten al usuario sensaciones de tacto de objetos generados por ordenador dentro de su campo visual. 
+                 También ofrecen la posibilidad de interactuar en diferentes situaciones que mezclan lo material y lo artificial.
+                 3. Moda:
+                 Un ámbito donde ya se usa con regularidad la realidad aumentada es la moda, por la posibilidad de probarte ropa virtualmente y ver cómo nos queda.
+                 También hay ya dispositivos para realidad aumentada en el terreno de la óptica, para probarnos gafas, o del maquillaje.
+            </p>    
+        </div>        
+             <h1>
+                <div class="bloque"></div>
+                <img src="imagenes/imagen2.jpg.jpg" class="imagen2">
+                 Nueva tendencia en la tecnologia sobre el internet de las cosas.
+             </h1>
+            <p>    
+                 El Internet de las cosas es una red de objetos físicos-vehículos, máquinas, electrodomésticos y más que utiliza sensores y APIs para conectarse e intercambiar datos por internet.
+              <h1>        
+                 ¿Qué hace posible IoT?
+              </h1>  
+            <p>
+                 IoT depende de una serie integral de tecnologías como las interfaces de programación de aplicaciones (API) que conectan los dispositivos a internet.Otras tecnologías IoT clave son las herramientas de gestión de Big Data, las analíticas predictivas, la IA y machine learning, la nube y la identificación por radiofrecuencia  (RFID).
+                 Automatización y control de procesos de producción: Se utilizan dispositivos IoT para mejorar la fabricación, la fiabilidad y la eficiencia de los productos obtenidos, así como para el seguimiento del producto en la fábrica.
+              </h1> 
+            <p>
+             <h1>
+                ¿En que ambito se podria utilizar el internet de las cosas?
+            </h1>
+            <p>
+                Automatización y control de procesos de producción:  
+                 Se utilizan dispositivos IoT para mejorar la fabricación, la fiabilidad y la eficiencia de los productos obtenidos, así como para el seguimiento del producto en la fábrica.
+                 Agricultura, ganadería y silvicultura: Se usan dispositivos IoT para la automatización de tareas fundamentales en la agricultura y silvicultura como es la detección y control de plagas y enfermedades o la satisfacción de las necesidades de las plantas (abonado, riego automático, etc.), así como para la cosecha, indicando el momento óptimo de recolección. En el caso de los animales, sirven para su seguimiento biométrico y geolocalización, además de poder chequear el estado de salud del animal y sus necesidades (alimentación, retirada de abono, etc.).
             </p>
         </div>
     </main>      
