Agregando el cuerpo de la pestaña de desarrollo web.

--- a/Desarrollo-Web.html
+++ b/Desarrollo-Web.html
@@ -124,7 +124,7 @@
               HTML no fue diseñado para tener etiquetas que ayuden a formatear la página. 
               Está hecho solo para escribir el marcado para el sitio.<br>
 
-             Se incluyeron etiquetas como <font> en HTML versión 3.2, y esto les causó muchos problemas 
+             Se incluyeron etiquetas como <!--</font>--> en HTML versión 3.2, y esto les causó muchos problemas 
              a los desarrolladores. Dado que los sitios web tenían diferentes fuentes, fondos de colores
              y estilos, el proceso de reescribir el código fue largo, doloroso y costoso. Por lo tanto,
              CSS fue creado por W3C para resolver este problema.
