Agregando cambios en general al proyecto

--- a/Redes-Sociales.html
+++ b/Redes-Sociales.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device=width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="estilo.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="scripts.js"></script>
+    <script src="scripts.js"></script>asdfawsegfaweg
     <title>
         Redes Sociales
     </title>
@@ -29,7 +29,7 @@
     <main class="main">
         <div class="bloque">
             <h1>
-                Presentación
+                ¿Qué son las redes sociales?
             </h1>
             <p>
                 Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
