--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 </head>
 <body>
     <header class="header">
-        <div class="bloque logo-nav-bloque">
+        <div class="container logo-nav-container">
             <a href="#" class="logo">LOGO</a>
             <span class="menu-icon">Ver menu</span>
             <nav class="navigation">
-                <ul>
+                <ul class="show">
                     <li><a href="index.html">Inicio</a></li>
                     <li><a href="Redes-Sociales.html">Redes Sociales</a></li>
                     <li><a href="Desarrollo-Web.html">Desarrollo Web</a></li>
@@ -26,100 +26,52 @@
             </nav>
         </div>
     </header>
-    <main class="main">
-        <div class="bloque">
-            <h1>
-                Presentación
-            </h1>
-            <p>
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
-                Qui consectetur beatae voluptatem aspernatur incidunt. 
-                Ducimus ea quo nihil similique nesciunt, distinctio 
-                deleniti voluptatem maiores iusto odit soluta voluptas 
-                optio qui! Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
-                Qui consectetur beatae voluptatem aspernatur incidunt. 
-                Ducimus ea quo nihil similique nesciunt, distinctio 
-                deleniti voluptatem maiores iusto odit soluta voluptas 
-                optio qui! Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
-                Qui consectetur beatae voluptatem aspernatur incidunt. 
-                Ducimus ea quo nihil similique nesciunt, distinctio 
-                deleniti voluptatem maiores iusto odit soluta voluptas 
-                optio qui!
-            </p>
+    <!-- SHOWCASE -->
+    <header class="showcase">
+        <h2>Big News Today!</h2>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id dolor laudantium rerum, excepturi est praesentium
+          natus qui? Tempora rerum, numquam inventore eligendi in, nostrum reprehenderit, eum cumque fugit eaque
+          similique!</p>
+        <a href="#" class="btn">
+          SignUp <i class="fas fa-chevron-right"></i>
+        </a>
+    </header>
+  
+      <!-- NEWS CARDS -->
+    <div class="news-cards">
+        <div>
+          <img src="imagenes/news1.jpg" alt="" />
+          <h3>Lorem, ipsum dolor.</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam dolore fugit esse corporis nesciunt minima
+            doloremque modi mollitia rerum, similique optio eligendi itaque amet qui ullam vel incidunt asperiores fuga?
+          </p>
+          <a href="#">Learn More <i class="fas fa-angle-double-right"></i></a>
         </div>
-        <div class="bloque">
-            <h1>
-                Redes Sociales
-            </h1>
-            <p>
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
-                Qui consectetur beatae voluptatem aspernatur incidunt. 
-                Ducimus ea quo nihil similique nesciunt, distinctio 
-                deleniti voluptatem maiores iusto odit soluta voluptas 
-                optio qui! Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
-                Qui consectetur beatae voluptatem aspernatur incidunt. 
-                Ducimus ea quo nihil similique nesciunt, distinctio 
-                deleniti voluptatem maiores iusto odit soluta voluptas 
-                optio qui! Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
-                Qui consectetur beatae voluptatem aspernatur incidunt. 
-                Ducimus ea quo nihil similique nesciunt, distinctio 
-                deleniti voluptatem maiores iusto odit soluta voluptas 
-                optio qui! Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
-                Qui consectetur beatae voluptatem aspernatur incidunt. 
-                Ducimus ea quo nihil similique nesciunt, distinctio 
-                deleniti voluptatem maiores iusto odit soluta voluptas 
-                optio qui!
-            </p>
-        </div>    
-        <div class="bloque">    
-            <h1>
-                Desarrollo Web
-            </h1>
-            <p>
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
-                Qui consectetur beatae voluptatem aspernatur incidunt. 
-                Ducimus ea quo nihil similique nesciunt, distinctio 
-                deleniti voluptatem maiores iusto odit soluta voluptas 
-                optio qui! Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
-                Qui consectetur beatae voluptatem aspernatur incidunt. 
-                Ducimus ea quo nihil similique nesciunt, distinctio 
-                deleniti voluptatem maiores iusto odit soluta voluptas 
-                optio qui! Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
-                Qui consectetur beatae voluptatem aspernatur incidunt. 
-                Ducimus ea quo nihil similique nesciunt, distinctio 
-                deleniti voluptatem maiores iusto odit soluta voluptas 
-                optio qui! Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
-                Qui consectetur beatae voluptatem aspernatur incidunt. 
-                Ducimus ea quo nihil similique nesciunt, distinctio 
-                deleniti voluptatem maiores iusto odit soluta voluptas 
-                optio qui!
-            </p>
+        <div>
+          <img src="imagenes/news2.jpg" alt="" />
+          <h3>Lorem, ipsum dolor.</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam dolore fugit esse corporis nesciunt minima
+            doloremque modi mollitia rerum, similique optio eligendi itaque amet qui ullam vel incidunt asperiores fuga?
+          </p>
+          <a href="#">Learn More <i class="fas fa-angle-double-right"></i></a>
         </div>
-        <div class="bloque">
-            <h1>
-                Tendencias
-            </h1>
-            <p>
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
-                Qui consectetur beatae voluptatem aspernatur incidunt. 
-                Ducimus ea quo nihil similique nesciunt, distinctio 
-                deleniti voluptatem maiores iusto odit soluta voluptas 
-                optio qui! Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
-                Qui consectetur beatae voluptatem aspernatur incidunt. 
-                Ducimus ea quo nihil similique nesciunt, distinctio 
-                deleniti voluptatem maiores iusto odit soluta voluptas 
-                optio qui! Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
-                Qui consectetur beatae voluptatem aspernatur incidunt. 
-                Ducimus ea quo nihil similique nesciunt, distinctio 
-                deleniti voluptatem maiores iusto odit soluta voluptas 
-                optio qui! Lorem, ipsum dolor sit amet consectetur adipisicing elit. 
-                Qui consectetur beatae voluptatem aspernatur incidunt. 
-                Ducimus ea quo nihil similique nesciunt, distinctio 
-                deleniti voluptatem maiores iusto odit soluta voluptas 
-                optio qui!
-            </p>
+        <div>
+          <img src="imagenes/news3.jpg" alt="" />
+          <h3>Lorem, ipsum dolor.</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam dolore fugit esse corporis nesciunt minima
+            doloremque modi mollitia rerum, similique optio eligendi itaque amet qui ullam vel incidunt asperiores fuga?
+          </p>
+          <a href="#">Learn More <i class="fas fa-angle-double-right"></i></a>
         </div>
-    </main>
+        <div>
+          <img src="imagenes/news4.jpg" alt="" />
+          <h3>Lorem, ipsum dolor.</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam dolore fugit esse corporis nesciunt minima
+            doloremque modi mollitia rerum, similique optio eligendi itaque amet qui ullam vel incidunt asperiores fuga?
+          </p>
+          <a href="#">Learn More <i class="fas fa-angle-double-right"></i></a>
+        </div>
+    </div>
     <footer>
         <div class="container-footer-all">
             <div class="container-body">
@@ -181,7 +133,8 @@
                         </label>
                     </div>
                 </div>
-            </div>   
+            </div>  
+        </div>     
     </footer>
 </body>
 </html>
